web/themes/contrib/porto_theme/css/custom.css
/* ... */
.user-login-form .button,
.user-pass .button,
.user-register-form .button{
    color: #fff;
    background-color: #0088cc;
    border-color: #0088cc #0088cc #006699;
}
.user-login-form .button:hover,
.user-pass .button:hover,
.user-register-form .button:hover{
    color: #fff;
    border-color: #0099e6 #0099e6 #0077b3;
    background-color: #0099e6;
}


.button.focus, .button:focus, .button:hover {
    color: #333;
    text-decoration: none;
}
.form-select{
    height: 34px;
}

/* STYLE GUIDE */
.position-relative { position: relative; }
.clear { clear: both; }
.label { color: inherit; }

/* SPECIFIC ELEMENT
@media screen and (min-width: 768px) {
    .call-to-action.call-to-action-in-footer { margin-top: 0; }
} */

/* PORTFOLIO */
.view-display-id-page_grid_fullwidth_nomargins { margin-top: -35px; }
.view-display-id-page_grid_fullwidth_nomargins ul.nav-pills + hr { display: none; }
.view-display-id-page_grid_fullwidth_nomargins ul.nav-pills {
    position: absolute;
    right: 15px;
    top: -57px;
}
.view-display-id-page_grid_fullwidth_nomargins ul.nav-pills > li > a { color: #fff; }
.view-display-id-page_grid_fullwidth_nomargins ul.nav-pills > li.active > a {
    background-color: transparent;
    color: #0088cc;
}
.container .view-header .container { padding: 0; }
.view-header .view-portfolio-category-filter {
    float: left;
    width: 50%;
    padding-right: 15px;
}
.view-header .view-portfolio-size-filter {
    float: right;
    width: 50%;
    padding-left: 15px;
}
@media (min-width: 992px) {
    #mainNav li.active a.is-active,
    #mainNav .dropdown-menu > .active > a {
        background: #f5f5f5;
    }
    #mainNav > li.active > a,#mainNav > li.active > a.is-active { background: #0088cc; }
}
@media screen and (max-width: 991px) {
    .view-career-blocks .toggle { margin-bottom: 0; }
}
@media screen and (max-width: 767px) {
    .view-display-id-page_grid_fullwidth_nomargins ul.nav-pills { display: none; }
    .portfolio-list .portfolio-info { float: none; }
    .portfolio-list h4.heading-primary { clear: both; }
    .view-header .view-portfolio-category-filter,
    .view-header .view-portfolio-size-filter {
        width: 100%;
        padding: 0;
    }
}
@media screen and (max-width: 479px) {
    /*.ui-widget{font-size: 13px;}*/
    .blocktabs.ui-tabs .ui-tabs-panel .simple-post-list a {
        font-size: 13px;
    }
    .blocktabs.ui-tabs .ui-tabs-panel .simple-post-list .post-meta {
        font-size: 0.7272em;
    }
    .portfolio-info + h5{clear: both;}
}

/* BLOG LIST */
.timeline-date a:hover,
.timeline-date a:focus {
    text-decoration: none;
}
#blogLoadMore { cursor: pointer; }
#blogLoadMoreLoader { clear: both; }
article .post-video iframe { width: 100%; }
article .post-audio iframe { width: 100%; }
@media screen and (max-width: 1199px) {
    section.timeline .timeline-box.left::before { right: -6.2%; }
    section.timeline .timeline-box.right::before { left: -6.8%; }
}
@media screen and (max-width: 479px) {
    .post-meta .btn.pull-right { float: none !important; }
}

iframe.twitter-share-button { display: block; }
.thumb-info .thumb-info-type a { color: #fff; }
.messages--status,
.messages--error {
    margin-bottom: 20px;
}

/* CART */
.cart-form {
    border-top: 4px solid #0088cc;
    padding: 30px 30px 10px;
    top: -1px;
    background: #F5F5F5;
    background: -webkit-linear-gradient( top , #FFF 1%, #fcfcfc 98%) repeat scroll 0 0 transparent;
    background: linear-gradient(to bottom, #FFF 1%, #fcfcfc 98%) repeat scroll 0 0 transparent;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    border-bottom: 1px solid #DFDFDF;
    border-left: 1px solid #ECECEC;
    border-right: 1px solid #ECECEC;
    margin-bottom: 20px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    min-height: 100px;
    position: relative;
    z-index: 1;
    border-radius: 8px;
    -webkit-border-radius: 8px;
    -moz-border-radius: 8px;
    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.04);
    -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.04);
    overflow: auto;
}
.cart-form table { width: 100%; }
.cart-form th { padding: 8px 10px; }
.cart-form td {
    padding: 8px 10px;
    border-top: 1px solid #dcdcdc;
}
.cart-form input[type="number"] {
    border: 1px solid #ccc;
    height: 35px;
    text-align: center;
    width: 45px;
}
.cart-form #edit-actions {
    border-top: 1px solid #dcdcdc;
    margin: 0;
    padding: 20px 10px;
    text-align: right;
}
.cart-form .button {
    transition: all 0.1s ease 0s;
    -moz-transition: all 0.1s ease 0s;
    -webkit-transition: all 0.1s ease 0s;
}
.cart-form #edit-submit {
    background-color: #fff;
    border: 1px solid #ccc;
    color: #666;
}
.cart-form #edit-submit:hover,
.cart-form #edit-submit:focus {
    background-color: #e6e6e6;
    color: #333;
    border-color: #adadad;
}
.cart-form #edit-checkout {
    margin-right: 0;
    background-color: #0088cc;
    border-color: #0088cc #0088cc #006699;
    color: #ffffff;
}
.cart-form #edit-checkout:hover,
.cart-form #edit-checkout:focus {
    background-color: #0099e6;
    border-color: #0099e6 #0099e6 #0077e3;
}
.cart-form .field--name-title {  display: none;}
@media screen and (max-width: 479px) {
    .cart-form { padding: 10px; }
    .cart-form th,
    .cart-form td {
        padding: 4px 5px;
    }
    .cart-form #edit-actions { padding: 10px 5px; }
}
/* ... */

